{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 13,
  "lineage": "bf976f43-746d-fded-45a0-3dcae048eb24",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b09bfacae1453cb",
            "arn": "arn:aws:ec2:us-east-1:418931870324:instance/i-0064bffd7b8a5c019",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0064bffd7b8a5c019",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c99d246a0529850b",
            "private_dns": "ip-10-0-0-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.157",
            "public_ip": "54.167.127.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d060533d3338676",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0259cbbec9831b09b",
            "tags": {
              "Name": "my-ec2-vm"
            },
            "tags_all": {
              "Name": "my-ec2-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ed3bfa607488c63"
            ]
          },
          "dependencies": [
            "module.networking.aws_security_group.dev-vpc-sg",
            "module.networking.aws_subnet.vpc-dev-public-subnet",
            "module.networking.aws_vpc.vpc-dev",
            "module.networking.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:internet-gateway/igw-051fb595ac0a39ff4",
            "id": "igw-051fb595ac0a39ff4",
            "owner_id": "418931870324",
            "tags": {
              "Name": "vpc-dev-igw"
            },
            "tags_all": {
              "Name": "vpc-dev-igw"
            },
            "vpc_id": "vpc-0f0a2059b08f74f53"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-dev-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051fb595ac0a39ff4",
            "id": "r-rtb-0720ed47aeeb17f471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0720ed47aeeb17f47",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.vpc-dev-igw",
            "module.networking.aws_route_table.vpc-dev-public-route-table",
            "module.networking.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-dev-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:route-table/rtb-0720ed47aeeb17f47",
            "id": "rtb-0720ed47aeeb17f47",
            "owner_id": "418931870324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-dev-public-route-table"
            },
            "tags_all": {
              "Name": "vpc-dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0a2059b08f74f53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-dev-public-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05db2cc9f62e1dd32",
            "route_table_id": "rtb-0720ed47aeeb17f47",
            "subnet_id": "subnet-0259cbbec9831b09b"
          },
          "dependencies": [
            "module.networking.aws_route_table.vpc-dev-public-route-table",
            "module.networking.aws_subnet.vpc-dev-public-subnet",
            "module.networking.aws_vpc.vpc-dev",
            "module.networking.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fe7feaa6ec1d1e5",
            "route_table_id": "rtb-0720ed47aeeb17f47",
            "subnet_id": "subnet-052c1d28892398148"
          },
          "dependencies": [
            "module.networking.aws_route_table.vpc-dev-public-route-table",
            "module.networking.aws_subnet.vpc-dev-public-subnet",
            "module.networking.aws_vpc.vpc-dev",
            "module.networking.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:security-group/sg-05ed3bfa607488c63",
            "description": "Dev VPC Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ed3bfa607488c63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-vpc-sg",
            "name_prefix": "",
            "owner_id": "418931870324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-vpc-sg"
            },
            "tags_all": {
              "Name": "dev-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0a2059b08f74f53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-dev-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:subnet/subnet-08df7954f179e3515",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08df7954f179e3515",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418931870324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-private-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-dev-private-subnet-1"
            },
            "vpc_id": "vpc-0f0a2059b08f74f53"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc-dev",
            "module.networking.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:subnet/subnet-0ea88803dbffbdf7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea88803dbffbdf7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418931870324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-private-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-dev-private-subnet-2"
            },
            "vpc_id": "vpc-0f0a2059b08f74f53"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc-dev",
            "module.networking.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-dev-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:subnet/subnet-0259cbbec9831b09b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0259cbbec9831b09b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418931870324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-dev-public-subnet-1"
            },
            "vpc_id": "vpc-0f0a2059b08f74f53"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc-dev",
            "module.networking.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:subnet/subnet-052c1d28892398148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052c1d28892398148",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418931870324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-dev-public-subnet-2"
            },
            "vpc_id": "vpc-0f0a2059b08f74f53"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc-dev",
            "module.networking.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:vpc/vpc-0f0a2059b08f74f53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0142a95e45dcba819",
            "default_route_table_id": "rtb-09b69c45b8bb0d02f",
            "default_security_group_id": "sg-02eeab585dd90b39f",
            "dhcp_options_id": "dopt-0de27c499c2b3143c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0a2059b08f74f53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b69c45b8bb0d02f",
            "owner_id": "418931870324",
            "tags": {
              "Name": "Vpc-dev"
            },
            "tags_all": {
              "Name": "Vpc-dev"
            }
          }
        }
      ]
    }
  ]
}